--- a/css/styles.css
+++ b/css/styles.css
@@ -27,41 +27,11 @@ body {
     line-height: 15px;
 }
 
-/* NEW GAME BUTTON */
-
-#new-game {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.new-game-btn {
-    background: transparent;
-    border-radius: 15px;
-    font-family: 'Cursed Timer ULiL';
-    color: white;
-    font-size: 18px;
-    padding: 5px 10px 5px 10px;
-    border: solid #9AABD8 2px;
-    text-decoration: none;
-}
-  
-.new-game-btn:hover {
-    background: #9AABD8;
-    background-image: -webkit-linear-gradient(top, #9AABD8, #9AABD8);
-    background-image: -moz-linear-gradient(top, #9AABD8, #9AABD8);
-    background-image: -ms-linear-gradient(top, #9AABD8, #9AABD8);
-    background-image: -o-linear-gradient(top, #9AABD8, #9AABD8);
-    background-image: linear-gradient(to bottom, #9AABD8, #9AABD8);
-    text-decoration: none;
-}
-
-
 /* SCORE BOARD */
 #score-board {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: -20px;
+    margin-top: -20px;
 }
 
 .scoreline {
@@ -78,12 +48,75 @@ body {
     line-height: 126.67px;
 }
 
+/* PERIOD */
+
+.period {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    margin-top: -200px;
+}
+
+.period-header {
+    color: white;
+    font-family: 'Verdana';
+    font-style: normal;
+    font-weight: 100;
+    font-size: 20px;
+    line-height: 5px;
+}
+
+.period-board {
+    margin-top: -30px;
+}
+
+.period-style {
+    color: greenyellow;
+    text-align: center;
+    background-color: black;
+    width: 80px;
+    height: 80px;
+    border-radius: 5px;
+    font-family: 'Cursed Timer ULiL';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 80.67px;
+}
+
+.period1 {
+    margin-top: -30px;
+}
+
+.reset-all {
+    margin-top: 20px;
+}
+
+.reset-btn {
+    background-color: transparent;
+    border-radius: 5px;
+    font-family: 'Cursed Timer ULiL';
+    font-style: normal;
+    font-weight: 400;
+    color: black;
+    font-size: 18px;
+    padding: 5px 10px 5px 10px;
+    border: solid #9AABD8 2px;
+    text-decoration: none;
+    width: 75px;
+    height: 45px;
+    margin: 0 5px;
+    text-align: center;
+}
+
 /* BUTTONS */
 
 #but {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-top: -30px;
 }
 
 #button {
@@ -107,20 +140,52 @@ body {
     height: 45px;
     margin: 0 5px;
 }
-  
+
 .btn:hover {
     text-decoration: none;
 }
 
-/* TEAM IN LEAD */
-#leader {
+/* FOULS */
+#foul-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    margin-bottom: -70px;
 }
 
-.lead {
+.foul-header {
     color: white;
+    font-family: 'Verdana';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 15px;
+}
+
+/* FOUL BOARD */
+#foul-board {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
+
+.foul {
+    color: greenyellow;
+    text-align: center;
+    background-color: black;
+    width: 80px;
+    height: 80px;
+    border-radius: 5px;
     font-family: 'Cursed Timer ULiL';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 80.67px;
+}
+
+.foul-btn {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
 }
 
 /* END GAME BUTTON */
@@ -128,6 +193,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 2px;
 }
 
 .end-game-btn {
@@ -149,4 +215,15 @@ body {
     background-image: -o-linear-gradient(top, #9AABD8, #9AABD8);
     background-image: linear-gradient(to bottom, #9AABD8, #9AABD8);
     text-decoration: none;
+}
+
+/* TEAM IN LEAD */
+#leader {
+    display: flex;
+    justify-content: center;
+}
+
+.lead {
+    color: white;
+    font-family: 'Cursed Timer ULiL';
 }
